--- a/public/index.html
+++ b/public/index.html
@@ -1604,24 +1604,24 @@
         <section id="home" class="fade-in">
             <h2>Welcome to FarmGrower</h2>
             <div class="hero-images">
-                <img src="https://source.unsplash.com/1600x900/?farming,agriculture" alt="Smart Farming">
+                <img src="assests/fisrt.jpg" alt="Smart Farming">
             </div>
             <div class="info-grid">
                 <div class="info-card">
                     <i class="fas fa-seedling icon"></i>
-                    <img src="https://source.unsplash.com/1600x900/?smart-farming" alt="Smart Farming Solutions">
+                    <img src="assests/SmartFarming_746x419.jpg" alt="Smart Farming Solutions">
                     <h3>Smart Farming Solutions</h3>
                     <p>Embrace the future of agriculture with our cutting-edge farming solutions. We combine traditional wisdom with modern technology to maximize your yield.</p>
                 </div>
                 <div class="info-card">
                     <i class="fas fa-tractor icon"></i>
-                    <img src="https://source.unsplash.com/1600x900/?modern-agriculture" alt="Modern Equipment">
+                    <img src="assests/download.jpeg" alt="Modern Equipment">
                     <h3>Modern Equipment</h3>
                     <p>Access state-of-the-art farming equipment and machinery. Our rental service makes advanced technology accessible to every farmer.</p>
                 </div>
                 <div class="info-card">
                     <i class="fas fa-leaf icon"></i>
-                    <img src="https://source.unsplash.com/1600x900/?organic-farming" alt="Sustainable Farming">
+                    <img src="assests/sus.jpg" alt="Sustainable Farming">
                     <h3>Sustainable Farming</h3>
                     <p>Join us in promoting sustainable agriculture. Our products and practices are designed to protect both your crops and the environment.</p>
                 </div>
@@ -1632,7 +1632,7 @@
             <h2>Agricultural Products</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1574323347407-f5e1ad6d020b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Rice Seeds">
+                    <img src="assests/rice seeds.jpg" alt="Rice Seeds">
                     <h3>Premium Rice Seeds</h3>
                     <p class="price">₹10/kg (₹250/bag)</p>
                     <p class="description">High-yield variety suitable for all seasons</p>
@@ -1641,7 +1641,7 @@
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1574181630752-e0317c5eaf27?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Wheat Seeds">
+                    <img src="assests/wheat seeds.jpg" alt="Wheat Seeds">
                     <h3>Organic Wheat Seeds</h3>
                     <p class="price">₹15/kg (₹300/bag)</p>
                     <p class="description">Certified organic wheat variety</p>
@@ -1650,7 +1650,7 @@
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1592982537447-7440770cbfc9?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Corn Seeds">
+                    <img src="assests/corn seeds.jpg" alt="Corn Seeds">
                     <h3>Hybrid Corn Seeds</h3>
                     <p class="price">₹20/kg (₹400/bag)</p>
                     <p class="description">High-yielding hybrid variety</p>
@@ -1659,7 +1659,7 @@
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1592921870789-04563d55041c?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Tomato Seeds">
+                    <img src="assests/tomato seeds.jpg" alt="Tomato Seeds">
                     <h3>Hybrid Tomato Seeds</h3>
                     <p class="price">₹50/packet</p>
                     <p class="description">Disease-resistant variety</p>
@@ -1668,7 +1668,7 @@
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1587049633312-d628ae50a8ae?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Cucumber Seeds">
+                    <img src="assests/cucumber seeds.jpg" alt="Cucumber Seeds">
                     <h3>Cucumber Seeds</h3>
                     <p class="price">₹40/packet</p>
                     <p class="description">High-yielding variety</p>
@@ -1677,7 +1677,7 @@
                     </button>
                 </div>
                 <div class="product-card">
-                    <img src="https://images.unsplash.com/photo-1588891557811-5f9464cf4c17?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Chili Seeds">
+                    <img src="assests/chilli seeds.jpg" alt="Chili Seeds">
                     <h3>Premium Chili Seeds</h3>
                     <p class="price">₹45/packet</p>
                     <p class="description">Spicy variety with high yield</p>
@@ -1692,7 +1692,7 @@
             <h2>Farm Equipment</h2>
             <div class="equipment-categories">
                 <div class="equipment-card">
-                    <img src="https://images.unsplash.com/photo-1592435468595-b4b3d7e67858?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Tractor">
+                    <img src="assests/John deere.jpg" alt="Tractor">
                     <h3>John Deere Tractor</h3>
                     <p class="price">₹1500/hour</p>
                     <p class="description">Suitable for all farming operations</p>
@@ -1701,7 +1701,7 @@
                     </button>
                 </div>
                 <div class="equipment-card">
-                    <img src="https://images.unsplash.com/photo-1588784773902-1c17b6abc7c1?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Harvester">
+                    <img src="assests/harvest.jpg" alt="Harvester">
                     <h3>Modern Harvester</h3>
                     <p class="price">₹2000/hour</p>
                     <p class="description">Efficient crop harvesting</p>
@@ -1719,7 +1719,7 @@
                     </button>
                 </div>
                 <div class="equipment-card">
-                    <img src="https://images.unsplash.com/photo-1581092162384-8987c1d64718?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Large Field Drone">
+                    <img src="assests/DJI-Agras-T50.jpg" alt="Large Field Drone">
                     <h3>Spraying Drone</h3>
                     <p class="price">₹800/hour</p>
                     <p class="description">Pesticide spraying for large fields</p>
